[add]:初始化jdk17版本